examples/type_system/failing/187_runtime_list_boundary_e1004.flx
import TypeSystem.BoundaryUnknown

fn sum_list(xs: List<Int>) -> Int {
    fold(xs, 0, \(acc: Int, x: Int) -> acc + x)
}

let dynamic = TypeSystem.BoundaryUnknown.dynamic_string()
sum_list(dynamic)
